fixed bug with sessions span of wrong color

--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -580,6 +580,13 @@ $body-color: #e9ebee;
 .glyphicon-camera {
     color: #55a950;
 }
+
+#login{
+  .glyphicon-camera{
+      color: #333;
+  }
+}
+
 .glyphicon-heart {
     color: #f50e6b;
 }
